# sayna

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Cross.toml  Dockerfile  README.md  RELEASE.md  build-test.sh  cliff.toml  config.example.yaml  docker-entrypoint.sh  docker-readme.md  release-plz.toml  run-todo.sh  test_deepgram_url.rs
.cargo/: config.toml
.cursor/rules/: axum.mdc  core.mdc  livekit.mdc  openapi.mdc  rust.mdc
.github/workflows/: ci.yml  docker.yml  release-plz.yml  release.yml
docs/: api-reference.md  authentication.md  azure-stt.md  azure-tts.md  cartesia-stt.md  cartesia-tts.md  deployment.md  docker.md  google-stt.md  google-tts.md  kokoro-tts.md  livekit_integration.md  livekit_webhook.md  openapi.yaml  runtime_validation_task-009.md  sip_config.md  sip_routing.md  vad.md  voice_manager.md  websocket.md  whisper-stt.md
examples/: sign_webhook.rs
src/: config.rs  init.rs  lib.rs  main.rs
src/auth/: api_secret.rs  client.rs  context.rs  extractor.rs  jwt.rs  mod.rs
src/config/: env.rs  merge.rs  mod.rs  recording.rs  sip.rs  utils.rs  validation.rs  yaml.rs
src/core/: mod.rs  state.rs  voice_manager.rs
src/core/cache/: mod.rs  store.rs
src/core/noise_filter/: assets.rs  config.rs  dsp.rs  mod.rs  model_manager.rs  pool.rs
src/core/providers/: auth.rs  mod.rs
src/core/providers/azure/: auth.rs  mod.rs  region.rs
src/core/providers/google/: auth.rs  client.rs  error.rs  mod.rs
src/core/stt/: base.rs  deepgram.rs  mod.rs
src/core/stt/azure/: client.rs  config.rs  messages.rs  mod.rs
src/core/stt/cartesia/: client.rs  config.rs  messages.rs  mod.rs  tests.rs
src/core/stt/elevenlabs/: client.rs  config.rs  messages.rs  mod.rs  tests.rs
src/core/stt/google/: config.rs  mod.rs  provider.rs  streaming.rs
src/core/stt/google/tests/: config.rs  mod.rs  provider.rs  streaming.rs
src/core/stt/whisper/: assets.rs  client.rs  mel.rs  mod.rs  model.rs  tokenizer.rs  vad.rs
src/core/tts/: base.rs  deepgram.rs  elevenlabs.rs  mod.rs  provider.rs
src/core/tts/azure/: config.rs  mod.rs  provider.rs
src/core/tts/cartesia/: config.rs  mod.rs  provider.rs
src/core/tts/google/: config.rs  mod.rs  provider.rs
src/core/tts/kokoro/: assets.rs  cache.rs  config.rs  mod.rs  model.rs  normalize.rs  phonemizer.rs  tokenizer.rs  vocab.rs  voice.rs
src/core/turn_detect/: assets.rs  config.rs  detector.rs  feature_extractor.rs  mod.rs  model_manager.rs  stub.rs  tokenizer.rs
src/core/vad/: assets.rs  config.rs  detector.rs  mod.rs  model_manager.rs  silence_tracker.rs  stub.rs
src/core/voice_manager/: callbacks.rs  config.rs  errors.rs  manager.rs  mod.rs  state.rs  stt_config.rs  stt_result.rs  tests.rs  turn_detection_tasks.rs  utils.rs  vad_processor.rs
src/core/voice_manager/manager/: audio.rs  callbacks.rs  constructors.rs  info.rs  lifecycle.rs  mod.rs  test_support.rs
src/core/voice_manager/stt_result/: mod.rs  processor.rs  vad_events.rs
src/core/voice_manager/tests/: basic.rs  helpers.rs  mod.rs  stubs.rs  vad_failures.rs  vad_turn_detection.rs
src/core/voice_manager/tests/callbacks/: duration_metadata.rs  helpers.rs  interruption_timing.rs  mod.rs  pcm_formats.rs
src/core/voice_manager/tests/speech_final/: duplicates.rs  helpers.rs  mod.rs  timing.rs
src/core/voice_manager/turn_detection_tasks/: backup_timeout.rs  mod.rs  smart_turn.rs  speech_final.rs
src/core/voice_manager/vad_processor/: mod.rs  processor.rs  state.rs  tests.rs
src/docs/: mod.rs  openapi.rs
src/errors/: app_error.rs  auth_error.rs
src/handlers/: api.rs  livekit.rs  livekit_webhook.rs  mod.rs  recording.rs  sip_hooks.rs  sip_transfer.rs  speak.rs  voices.rs  ws.rs
src/handlers/livekit/: mod.rs  participants.rs  room_guard.rs  rooms.rs  token.rs  webhook.rs
src/handlers/sip/: call.rs  hooks.rs  mod.rs  transfer.rs
src/handlers/ws/: audio_handler.rs  command_handler.rs  config.rs  config_handler.rs  error.rs  handler.rs  loading_handler.rs  messages.rs  mod.rs  processor.rs  state.rs  tests.rs
src/livekit/: client.rs  loading_clip.rs  manager.rs  metadata.rs  mod.rs  operations.rs  resample.rs  room_handler.rs  sip_handler.rs  types.rs
src/livekit/client/: audio.rs  audio_pump.rs  callbacks.rs  connection.rs  events.rs  loading_audio.rs  messaging.rs  mod.rs  operation_worker.rs  tests.rs
src/middleware/: auth.rs  mod.rs
src/middlewares/: auth.rs
src/routes/: api.rs  mod.rs  webhooks.rs  ws.rs
src/state/: mod.rs  sip_hooks_state.rs
src/utils/: mod.rs  noise_filter.rs  phone_validation.rs  req_manager.rs  sip_api_client.rs  sip_hooks.rs
tests/: api_tests.rs  auth_integration_test.rs  auth_middleware_test.rs  azure_stt_integration.rs  azure_tts_integration.rs  clear_command_tests.rs  elevenlabs_stt_integration.rs  google_tts_test.rs  livekit_webhook_test.rs  tts_sequential.rs  turn_detect_test.rs  vad_e2e_test.rs  vad_integration.rs  voice_manager_elevenlabs.rs  whisper_stt_integration.rs  ws_tests.rs
