[package]
name = "sayna"
version = "0.1.7"
edition = "2024"
repository = "https://github.com/saynaai/sayna"
license = "Apache-2.0"
readme = "README.md"
keywords = ["voice", "stt", "tts", "livekit", "speech"]
categories = ["multimedia::audio", "web-programming"]
description = "Real-time voice processing server with unified STT and TTS services"
publish = false  # Binary-only distribution via GitHub releases

[features]
default = []
stt-vad = ["dep:ort", "dep:ndarray", "dep:rustfft"]
noise-filter = [
    "dep:ndarray",
    "dep:num_cpus",
    "dep:ort",
    "dep:rubato",
    "dep:audioadapter-buffers",
    "dep:realfft",
    "dep:tar",
    "dep:flate2",
    "dep:ini",
]
openapi = [
    "dep:utoipa",
]

[dependencies]
async-trait = "0.1.88"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

# Server
axum = { version = "0.8.4", features = ["ws"] }
tokio = { version = "1.46.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["trace"] }
futures = "0.3"
futures-util = "0.3"
bytes = "1.8"
http-body-util = "0.1"

# HTTP client
reqwest = { version = "0.13.1", default-features = false, features = ["json", "rustls", "stream", "http2"] }
hound = "3.5"

# JWT authentication
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }

# WebSocket client
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-webpki-roots"] }
url = "2.5.0"
base64 = "0.22.0"
http = "1.0"

# TLS support
rustls = { version = "0.23", default-features = false, features = ["ring"] }

# Environment variables
dotenvy = "0.15"

# Configuration
serde_yaml = "0.9"

# Error handling
thiserror = "2.0.12"

# Performance optimizations
parking_lot = "0.12"

# Cache dependencies
moka = { version = "0.12", features = ["future"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
arc-swap = "1.7"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Text processing
regex = "1.10"
once_cell = "1.19"
uuid = { version = "1.10", features = ["v4"] }

object_store = { version = "0.13", features = ["aws"] }

# OpenAPI documentation (feature-gated)
utoipa = { version = "5.3", optional = true, features = ["axum_extras"] }

# LiveKit
livekit = "=0.7.29"
livekit-api = "=0.4.12"
livekit-protocol = "=0.6.0"
# Need prost/pbjson-types for SIP API client, using same versions as livekit to avoid conflicts
prost = "0.12.6"
pbjson-types = "0.6.0"

time = ">=0.3.35"
# ndarray for DSP operations in noise-filter and stt-vad
ndarray = { version = "0.17.2", optional = true }
num_cpus = { version = "1.17.0", optional = true }

# DeepFilterNet ORT migration dependencies
rubato = { version = "1.0.0", optional = true }
audioadapter-buffers = { version = "2.0.0", optional = true }
realfft = { version = "3.4", optional = true }
tar = { version = "0.4", optional = true }
flate2 = { version = "1.1", optional = true }
ini = { version = "1.3", optional = true }

# Turn detection dependencies
ort = { version = "2.0.0-rc.11", features = ["load-dynamic", "download-binaries"], optional = true }
rustfft = { version = "6.2", optional = true }
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
subtle = "2.6"
anyhow = "1.0"

# Google Cloud STT
google-api-proto = { version = "=1.710.0", features = ["google-cloud-speech-v2"] }
google-cloud-auth = "1.2.0"
tonic = { version = "0.12", features = ["channel", "tls-roots", "prost"] }
prost-types = "0.13"
async-stream = "0.3"

[dev-dependencies]
tower = { version = "0.5.2", features = ["util"] }
tempfile = "3.8"
serial_test = "3.2"
tokio-test = "0.4"
mockito = "1.2"
wiremock = "0.6"

# Release profile optimizations for smaller, faster binaries
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
